<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ice</string>
    <string name="error">Error</string>
    <string name="error_disconnected">Disconnected from the Steam Network</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="steam_avatar">Avatar</string>
    <string name="chat">Chat</string>
    <string name="trade">Trade</string>
    <string name="friends">Friends</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_successful">Action successful.</string>
    <string name="action_failed">Action failed.</string>
    <string name="search">Search</string>
    <string name="quote">“%1$s”</string>

    <string name="steamguard_new">This is the first time you are logging into this account on this device.\n\nAs per Valve restrictions, you may not be allowed to trade or send trade offers from this device for the next 7 days.</string>
    <string name="api_key_not_loaded">A WebAPI key was not properly retrieved. This feature will not work.</string>
    <string name="rate_snackbar_text">Do you like Ice?</string>
    <string name="rate_snackbar_action">RATE</string>

    <string name="nav_friends">Friends</string>
    <string name="nav_inventory">Inventory</string>
    <string name="nav_offers">Trade Offers</string>
    <string name="nav_games">Library</string>
    <string name="nav_store">Steam Store</string>
    <string name="nav_market">Steam Community Market</string>
    <string name="nav_browser">Steam Browser</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About Ice</string>
    <string name="nav_signout">Sign Out</string>

    <string name="purchase_pending">Purchase pending…</string>
    <string name="purchase_complete">Purchase successful! Thank you!</string>
    <string name="signed_out">Signed Out</string>
    <string name="send_button">Send</string>
    <string name="chat_hint">Tap to chat</string>
    <string name="app_crashed_toast">Ice Client has crashed, but a report has been sent to the developer to help fix the issue!</string>
    <string name="playing">Playing</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="add">Add</string>
    <string name="change_display_name">Change Display Name</string>
    <string name="change_display_name_prompt">Please enter your new display name:</string>
    <string name="set_currently_playing_game">Set Currently Playing Game</string>

    <string name="x_new_messages">%1$d messages</string>

    <string-array name="allowed_states">
        <item>Online</item>
        <item>Away</item>
        <item>Busy</item>
        <item>Snooze</item>
        <item>Looking to Trade</item>
        <item>Looking to Play</item>
    </string-array>
    <string-array name="persona_states">
        <item>Offline</item>
        <item>Online</item>
        <item>Busy</item>
        <item>Away</item>
        <item>Snooze</item>
        <item>Looking to Trade</item>
        <item>Looking to Play</item>
    </string-array>

    <string-array name="connection_status">
        <item>Unknown Status</item>
        <item>Initializing…</item>
        <item>Connecting…</item>
        <item>Logging on…</item>
        <item>Authenticating…</item>
        <item>Fetching Key…</item>
        <item>Connected</item>
        <item>Disconnected</item>
    </string-array>

    <string name="copied_to_clipboard">Copied to clipboard.</string>

    <string name="change">Change</string>
    <string name="baa">moo</string>
    <string name="dismiss">Dismiss</string>
    <string name="feature_not_implemented">Feature not implemented</string>
    <string name="error_getting_key">Error fetching WebAPI key. Some features (like trade offers) may not work properly.</string>
    <string name="error_steamapi">Error accessing SteamAPI.</string>
    <string name="ok">OK</string>

    <string name="action_settings">Settings</string>

    <string name="web_back">Go Back</string>
    <string name="web_forward">Go Forward</string>
    <string name="web_reload">Reload Page</string>
    <string name="web_community">Steam Community</string>
    <string name="web_store">Steam Store</string>
    <string name="web_toggle_view">Desktop view</string>

    <string name="library_playtime">%1$.1f hrs on record</string>
    <string name="library_playtime_full">%1$.1f hrs past two weeks\n%2$.1f hrs on record</string>
    <string name="library_sort">Change sorting</string>
    <string name="library_sort_name">Sort alphabetically</string>
    <string name="library_sort_playtime">Sort by playtime</string>
    <string name="library_activate_product">Activate a Product</string>
    <string name="library_enter_key">Please enter the product code you wish to activate.</string>
    <string name="library_validating_key">Verifying product code.</string>
    <string name="library_activation_successful">Activation Successful</string>
    <string name="library_activation_failed">Activation Failed</string>
    <string name="library_activation_invalid_code">Invalid product code.</string>
    <string name="library_activation_error">Unknown error.</string>
    <string name="library_activation_code_used">Product code already redeemed.</string>

    <string name="steamguard_mobile_authenticator">Mobile Authenticator</string>
    <string name="steamguard_unavailable">You can only enable Mobile Authenticator on a saved account.</string>
    <string name="steamguard_not_enabled">Steam Guard Mobile Authenticator is not set up on this device.</string>
    <string name="steamguard_code">Your Steam Guard Code:</string>
    <string name="steamguard_enable_authenticator">Enable Authenticator</string>
    <string name="steamguard_manage_authenticator">Manage Authenticator</string>
    <string name="steamguard_import_authenticator_mafile">Import .mafile</string>
    <string name="steamguard_import_authenticator">Import Authenticator (.mafile)</string>
    <string name="steamguard_export_authenticator">Export Authenticator (.mafile)</string>
    <string name="steamguard_get_revocation_code">View Revocation Code</string>
    <string name="steamguard_revocation_code">Your revocation code is:\n%1$s</string>
    <string name="steamguard_instructions_finalize">To finalize adding the Mobile Authenticator, please enter the code sent to you by Steam via SMS.</string>
    <string name="steamguard_enable_success">Successfully enabled mobile authentication.\n\nPlease write down your emergency recovery code: %1$s</string>
    <string name="steamguard_enable_failure">Failed to enable mobile authenticator: %1$s</string>
    <string name="steamguard_export">Export Mobile Authenticator</string>
    <string name="steamguard_import">Import Mobile Authenticator</string>
    <string name="steamguard_duplicate">Your account is already using the Official Mobile Authenticator. You cannot use two authenticators at the same time.</string>
    <string name="steamguard_import_password">Please enter the password for the account \'%1$s\'.</string>
    <string name="steamguard_select_mafile">Please select the .mafile you wish to import.</string>

    <string-array name="store_tabs">
        <item>Catalog</item>
        <item>Cart</item>
        <item>Search</item>
        <item>Wishlist</item>
        <item>News</item>
        <item>Account</item>
    </string-array>
    <string-array name="store_urls" translatable="false">
        <item>https://store.steampowered.com/</item>
        <item>https://store.steampowered.com/cart/</item>
        <item>https://store.steampowered.com/search</item>
        <item>https://steamcommunity.com/my/wishlist/</item>
        <item>https://store.steampowered.com/news</item>
        <item>https://store.steampowered.com/account/</item>
    </string-array>

    <color name="notification_on">#5C7E10</color>
    <color name="notification_off">#777</color>
    <color name="notification_text_on">#70ba24</color>
    <color name="notification_text_off">#bfbfbf</color>
    <plurals name="notification_comments">
        <item quantity="one">%d new comment</item>
        <item quantity="other">%d new comments</item>
    </plurals>
    <plurals name="notification_items">
        <item quantity="one">%d new item in your inventory</item>
        <item quantity="other">%d new items in your inventory</item>
    </plurals>
    <plurals name="notification_messages">
        <item quantity="one">%d unread chat message</item>
        <item quantity="other">%d unread chat messages</item>
    </plurals>
    <plurals name="notification_trades">
        <item quantity="one">%d new trade notification</item>
        <item quantity="other">%d new trade notifications</item>
    </plurals>
    <string name="steamguard_import_error_wrong_account">Error: this authentication information is for a different Steam account: %1$s</string>
    <string name="library_view_store_page">View Store Page</string>
    <string name="library_begin_idling">Start Idling Session</string>
    <string name="library_stop_idling">Stop Idling Session</string>
    <string name="idling_started">Now idling:  %1$s</string>
    <string name="idling_stopped">No longer idling.</string>
    <string name="premium_only">This is a premium feature only.</string>
    <string name="premium_unlock">Purchase Premium</string>
</resources>