<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/steamguard_code_card"
        card_view:cardBackgroundColor="@color/cardview_dark_background"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        android:layout_margin="4dp">

        <com.aegamesi.steamtrade.fragments.support.SteamGuardCodeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/steamguard_code_view"
            android:layout_gravity="center_horizontal"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        card_view:cardBackgroundColor="@color/cardview_dark_background"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/steamguard_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/steamguard_not_enabled"
                android:gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/steamguard_manage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/steamguard_enable_authenticator"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/steamguard_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/steamguard_import_authenticator"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>

            <Button
                android:id="@+id/steamguard_revocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/steamguard_get_revocation_code"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
    </ScrollView>